--- a/html/FeedPage.html
+++ b/html/FeedPage.html
@@ -1,3 +1,13 @@
 <div>
-	<p> This is my Feed page..... cool....</p>
+	<table id = "keyInFeed" name = "keyInFeed">
+		<tr>
+			<td><input type = "text" id = "enterFeed" name = "enterFeed" size = "100" value= "Text Feed or URL Feed" ng-model="newFeed"></td>
+			<td><input type = "button" id = "postButton" name = "postButton" value = "Post" ng-click = "insertNewFeed()"></td>
+		</tr>
+	</table>
+<div ng-repeat="feed in feedArray">
+	<div> {{ feed.name}}</div>
+	<div> {{ feed.date}}</div>
+	<button ng-click="deleteFeed(feed.name)">&times;</button>
+</div>
 </div>
