--- a/html/MenuPage.html
+++ b/html/MenuPage.html
@@ -1,23 +1,55 @@
+<!DOCTYPE html>
 <html ng-app="MenuPageApp">
-	<head>
-	<title>
-		My Sample Book Application
-	</title>
-	</head>
-	<body>
-		<header>
-			<p><h1> My Book Application </h1></p>			
-		</header>
-		<nav>
-			<div> <a href="#/FeedPage"> Feed </a></div>
-			<div> <a href="#/ProfilePage"> Profile </a></div>
-		</nav>
-		<section>
-			<div ng-view="">
-		</section>
-		<footer>
-			<h3> Talent Improving Exercise</h3>
-		</footer>
+
+<head>
+<style>
+header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;	 
+}
+nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:100px;
+    float:left;
+    padding:5px;	      
+}
+section {
+    width:350px;
+    float:left;
+    padding:10px;	 	 
+}
+footer {
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+    padding:5px;	 	 
+}
+</style>
+</head>
+
+<body>
+
+<header>
+<h1>My Book Application</h1>
+</header>
+
+<nav>
+<div><a href="#/FeedPage"> Feed </a></div><br>
+<div> <a href="#/ProfilePage"> Profile </a><br>
+</nav>
+
+<section>
+	<div ng-view="">
+</section>
+
+<footer>
+Talent improving Exercise
+</footer>
 		<script src="..\..\scripts\angular-1.2.26\angular.min.js">
 		</script>
 		<script src="..\..\scripts\angular-1.2.26\angular-route.min.js">
@@ -26,5 +58,7 @@
 		</script>
 		<script src="..\scripts\controller.js">
 		</script>
-	</body>
+		<script src="..\service\bookApplicationService.js">
+		</script>
+</body>
 </html>
